feature: added swagger docs for teams endpoints
