# src/server/services/swagger/definitions.yaml
@@ -172,7 +172,7 @@ definitions:
         type: integer
         example: 1
 
-  # Announcements
+  # Videos
   TrainingVideos:
     type: array
     items:
@@ -230,6 +230,121 @@ definitions:
         type: string
         example: deleted
       video_id:
+        type: integer
+        example: 1
+
+  # Teams
+  TeamInfo:
+    type: object
+    properties:
+      team_id:
+        type: integer
+        example: 1
+      team_name:
+        type: string
+        example: "Example Team"
+
+  TeamsMembers:
+    type: array
+    items:
+      type: object
+      properties:
+        user_id:
+          type: int
+          example: 1
+        first_name:
+          type: string
+          example: "Israel"
+        last_name:
+          type: string
+          example: "Israeli"
+        email:
+          type: string
+          example: "example sub-category"
+
+  Teamsinformation:
+    type: array
+    items:
+      type: object
+      properties:
+        team_id:
+          type: int
+          example: 1
+        coach_id:
+          type: int
+          example: 1
+        name:
+          type: string
+          example: "Example team name"
+        min_age:
+          type: int
+          example: 18
+        max_age:
+          type: int
+          example: 22
+        description:
+          type: string
+          example: "team description"
+        created_at:
+          type: date-time
+          example: "2022-06-10T12:50:16.089Z"
+        updated_at:
+          type: date-time
+          example: "2022-06-11T12:50:16.089Z"
+
+  AssignedToTeam:
+    type: object
+    properties:
+      member_id:
+        type: integer
+        example: 1
+      user_id:
+        type: integer
+        example: 1
+      team_id:
+        type: integer
+        example: 1
+      created_at:
+        type: date-time
+        example: "2022-06-10T12:50:16.089Z"
+      updated_at:
+        type: date-time
+        example: "2022-06-11T12:50:16.089Z"
+
+  UnassignedStatus:
+    type: object
+    properties:
+      status:
+        type: string
+        example: "unassigned from team successfully."
+
+  createdTeamStatus:
+    type: object
+    properties:
+      status:
+        type: string
+        example: "created"
+      team_id:
+        type: integer
+        example: 1
+
+  updatedTeamStatus:
+    type: object
+    properties:
+      status:
+        type: string
+        example: "updated"
+      team_id:
+        type: integer
+        example: 1
+
+  deletedTeamStatus:
+    type: object
+    properties:
+      status:
+        type: string
+        example: "deleted"
+      team_id:
         type: integer
         example: 1
 
